@@ -373,7 +373,11 @@ server    rotate.aprs.net    14580
 # ***********  Multiple <beacon>  definitions can follow   *********
 <beacon>
 #
-#  Beacons are sent out to all radio transmitters AND to APRSIS.
+#  Beacons are sent out to radio transmitters AND/OR APRSIS.
+#  Default if "both", other modes are settable.
+#
+#beaconmode { aprsis | both | radio }
+#
 #  They are sent to all transmitters that have "tx\-ok true" setting
 #  if no "to" entry is defined, and only to defined transmitter, if
 #  the "to" entry is defined.  The "for" subfield defaults to "$mycall".
